Updated Index Page

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
             
 
 
-            <input type="text" class="form-control input-lg" id="siteToAdd" value="https://haapi.azurewebsites.net">
+            <input type="text" class="form-control input-lg" id="siteToAdd" placeholder="http://sample.azurewebsites.net">
             <br />
             <a  class="btn btn-warning btn-lg" id="addSite">Add Site</a>
         </div>
@@ -48,11 +48,11 @@
                         <p>Please enter the publishing credentials for your web site: </p>
                         <div class="form-group">
                             <label for="exampleInputEmail1">Username</label>
-                            <input type="email" class="form-control" id="username" value="$haapi">
+                            <input type="email" class="form-control" id="username" placeholder="publishing username">
                         </div>
                         <div class="form-group">
                             <label for="exampleInputPassword1">Password*</label>
-                            <input type="password" class="form-control" id="password" value="MpuxyXt8Xtyxh4n46zuCa5jN1YKTZzt5rr9HzDtffXhkonokk68v5lBXiQ6t">
+                            <input type="password" class="form-control" id="password" placeholder="publishing password">
                         </div>
                         <p>
                             *login information is not saved
